public enum PaymentMethod {
    BANK, PAYMASTER, SENDBYPOST;
}